Created the firends system work in progress

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
             <%= link_to "My gruppettos", gruppettos_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Friends", "#", class: "nav-link" %>
+            <%= link_to "Friends", "#{friendships_path}", class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "Routes", "#", class: "nav-link" %>
