updated the nav bar to go to friends

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,9 +21,6 @@
             <%= link_to "My gruppettos", gruppettos_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Friends", "#{friendships_path}", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
             <%= link_to "Routes", "#", class: "nav-link" %>
           </li>
           <li class="nav-item dropdown ms-3">
@@ -34,6 +31,7 @@
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
               <%= link_to "My profile", "#", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+              <%= link_to "Friends", "#{friendships_path}", class: "dropdown-item" %>
             </div>
           </li>
         <% else %>
