Changed form to cooler version

--- a/app/views/gruppettos/show.html.erb
+++ b/app/views/gruppettos/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-3">
   <h1 class="pt-5"> <%= @gruppetto.name %></h1>
-  <p> <%= @gruppetto.start.strftime('%d %b %l%P') %></p>
+  <p> <%= @gruppetto.start.strftime('%d %b %l%P') unless @gruppetto.start.nil? %></p>
 
   <div class="d-flex justify-content-between">
     <div class="">
