--- a/app/views/tracks/_selection.html.erb
+++ b/app/views/tracks/_selection.html.erb
@@ -1,4 +1,4 @@
-<div class="<%= hidden ? 'd-none' : '' %>" data-gr-form-track-target="selector">
+<div class="<%= hidden ? 'd-none' : '' %>" data-gruppetto-form-hide-target="trackSelector">
   <select class="form-select" aria-label="" name='gruppetto[track][id]'>
     <option value=""></option>
     <% tracks.each do |track| %>
