--- a/app/views/tracks/_fields.html.erb
+++ b/app/views/tracks/_fields.html.erb
@@ -1,11 +1,34 @@
-<div class="<%= hidden ? 'd-none' : '' %>" data-gr-form-track-target="form">
+<div class="<%= hidden ? 'd-none' : '' %>" data-gruppetto-form-hide-target="trackForm">
       <%= f.simple_fields_for(track) do |tracks_form| %>
           <%= tracks_form.input :name %>
-          <%= tracks_form.input :address,
-                          input_html: {data: {address_autocomplete_target: "address"}, class: 'd-none'},
-                          wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
-          <%= tracks_form.input :total_km, placeholder: "Test" %>
-          <%= tracks_form.input :total_vm %>
-          <%= tracks_form.input :file, as: :file %>
+          <p>Do you want to upload a gpx-file?</p>
+              <div class="form-check form-check-inline mb-3">
+                <input class="form-check-input"
+                        type="radio"
+                        name="gruppetto[track][track_file]"
+                        id="track_file"
+                        value="yes"
+                        data-action='click->gruppetto-form-hide#trackFile'>
+                <label class="form-check-label" for="inlineRadio1">Yes</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input"
+                        type="radio"
+                        name="gruppetto[track][track_file]"
+                        id="track_file"
+                        value="no"
+                        data-action='click->gruppetto-form-hide#noTrackFile'>
+                <label class="form-check-label" for="inlineRadio2">No</label>
+              </div>
+          <div data-gruppetto-form-hide-target="trackInfo" class="d-none">
+            <%= tracks_form.input :address,
+                            input_html: {data: {address_autocomplete_target: "address"}, class: 'd-none'},
+                            wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
+            <%= tracks_form.input :total_km %>
+            <%= tracks_form.input :total_vm %>
+          </div>
+          <div data-gruppetto-form-hide-target="trackFile" class="d-none">
+            <%= tracks_form.input :file, as: :file %>
+          </div>
         <% end %>
 </div>
