--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,5 +2,6 @@
 @import 'address_autocomplete';
 @import "alert";
 @import "avatar";
+@import "chatroom";
 @import "form_legend_clear";
 @import "navbar";
