--- a/app/views/gruppettos/index.html.erb
+++ b/app/views/gruppettos/index.html.erb
@@ -34,19 +34,19 @@
     </li>
   </ul>
 </div>
-<div class="container mt-4" style="position:relative; top:0;">
-<% @gruppettos.each do | gruppetto | %>
+<div class="mt-4 col-12 col-md-4" style="position:relative; top:0;">
+
   <%# renders the index_card.html.erb with sending the gruppetto params %>
+  <table class="table table-hover">
+    <thead>
+    </thead>
+      <tbody>
+        <% @gruppettos.each do | gruppetto | %>
+         <%= render "index_card", gruppetto: gruppetto %>
+        <% end %>
+    </tbody>
+  </table>
   <div class="">
-    <%= render "index_card", gruppetto: gruppetto %>
   </div>
-<% end %>
-</div>
-<div class="d-flex justify-content-between fixed-bottom bg-white p-2">
-  <div class="w-50">
-    <%= link_to "Back to Grupettos", gruppettos_path, class: "btn btn-outline-primary w-100" %>
-  </div>
-  <div class="w-50">
-    <%= link_to "Home", root_path,class: "btn btn-primary w-100"%>
-  </div>
+
 </div>
