changed layout due to titel

--- a/app/views/gruppettos/index.html.erb
+++ b/app/views/gruppettos/index.html.erb
@@ -34,7 +34,7 @@
     </li>
   </ul>
 </div>
-<div class="mt-4 col-12 col-md-4" style="position:relative; top:0;">
+<div class="mt-4 col-12" style="position:relative; top:0;">
 
   <%# renders the index_card.html.erb with sending the gruppetto params %>
   <table class="table table-hover">
