--- a/app/views/gruppettos/_index_card.html.erb
+++ b/app/views/gruppettos/_index_card.html.erb
@@ -2,48 +2,56 @@
   <td>
   <%= link_to gruppetto_path(gruppetto), class: 'text-decoration-none' do  %>
     <div class="d-flex" style="color:#0E0000">
-        <% unless gruppetto.track.image.url.nil? %>
-          <%= cl_image_tag gruppetto.track.image.key, height: 100, width: 100, crop: :fill %>
-        <% else %>
-        <%= image_tag "track-fallback.svg", height: 100, width: 100 %>
-        <% end %>
+        <div>
+          <% unless gruppetto.track.image.url.nil? %>
+            <%= cl_image_tag gruppetto.track.image.key, height: 125, width: 125, crop: :fill %>
+          <% else %>
+          <%= image_tag "track-fallback.svg", height: 125, width: 125 %>
+          <% end %>
+        </div>
         <div class="m-1 ms-3 flex-grow-1">
-        <div class="d-flex">
-          <div>
-            <h5 class="mb-0 overflow-hidden" style="color:#0E0000"><%= gruppetto.name %></h5>
-            <div class="d-flex">
-            <p class="overflow-hidden text-muted"><%= gruppetto.start.strftime('%d.%m.%Y  - %l%P') unless gruppetto.start.nil? %></p>
-            </div>
-          </div>
-          <div class="d-flex flex-grow-1 align-items-baseline">
-          <div class="flex-grow-1 text-end pe-3">
-            <% gruppetto.participants[0..4].each do |participant| %>
-              <% if true %>
-              <%# if participant.avatar.key.nil? %>
-                <%= image_tag "avatar-fallback.svg", height: 30, width: 30, class: 'rounded-circle shadow-sm', style: 'margin-inline-start: -16px;' %>
-              <% else %>
-                <%= cl_image_tag participant.avatar.key, height: 100, width: 100, crop: :fill %>
-              <% end %>
-            <% end %>
-            </div>
-            <p class='mb-0 ml-2'><%= gruppetto.participants.count %> rider<%= gruppetto.participants.count > 1 ? '(s)' : ''%></p>
-          </div>
-        </div>
           <div class="d-flex">
-            <div class="d-flex align-items-baseline flex-grow-1"  style="width: 120px;">
-              <i class="fa-regular fa-route"></i>
-              <p class="ms-2 mb-0 flex-grow-1 text-end"><%= gruppetto.avg_speed.nil? ? " - " : gruppetto.avg_speed %> km/h</p>
+            <div>
+              <h5 class="mb-0" style="color:#0E0000"><%= gruppetto.name %></h5>
+              <div class="d-flex">
+              <p class="overflow-hidden text-muted"><%= gruppetto.start.strftime('%d.%m.%Y  - %l%P') unless gruppetto.start.nil? %></p>
+              </div>
             </div>
-            <div class="d-flex align-items-baseline flex-grow-1"  style="width: 120px;margin-left:24px;">
-              <i class="fa-regular fa-route"></i>
-              <p class="ms-2 mb-0 flex-grow-1 text-end"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_km %> km</p>
-            </div>
-            <div class="d-flex align-items-baseline flex-grow-1" style="width: 120px;margin-left:24px;">
-              <i class="fa-regular fa-mountain-sun"></i>
-              <p class="ms-2 mb-0 flex-grow-1 text-end"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_vm %> vm</p>
+            <div class="d-flex flex-grow-1 align-items-baseline">
+            <div class="flex-grow-1 text-end pe-3">
+              <% gruppetto.participants[0..4].each do |participant| %>
+                <% if true %>
+                <%# if participant.avatar.key.nil? %>
+                  <%= image_tag "avatar-fallback.svg", height: 30, width: 30, class: 'rounded-circle shadow-sm', style: 'margin-inline-start: -16px;' %>
+                <% else %>
+                  <%= cl_image_tag participant.avatar.key, height: 100, width: 100, crop: :fill %>
+                <% end %>
+              <% end %>
+              </div>
+              <%# <p class='mb-0 ml-2 overflow-hidden'><%= gruppetto.participants.count %> <%#rider<%= gruppetto.participants.count > 1 ? '(s)' : ''%></p>
             </div>
           </div>
-        </div>
+            <div class="d-flex justify-content-start">
+              <div class="d-flex align-items-baseline"  style="width: 120px;">
+                <i class="fa-regular fa-route"></i>
+                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden"><%= gruppetto.avg_speed.nil? ? " - " : gruppetto.avg_speed %> km/h</p>
+              </div>
+              <div class="d-flex align-items-baseline"  style="width: 120px;margin-left:24px;">
+                <i class="fa-regular fa-route"></i>
+                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_km %> km</p>
+              </div>
+            </div>
+            <div class="d-flex justify-content-start">
+              <div class="d-flex align-items-baseline"  style="width: 120px;">
+                <i class="fa-regular fa-route"></i>
+                <p class="ms-2 mb-0 flex-grow-1 text-center overflow-hidden"><%= gruppetto.difficulty.nil? ? " - " : gruppetto.difficulty %> </p>
+              </div>
+              <div class="d-flex align-items-baseline" style="width: 120px;margin-left:24px;">
+                <i class="fa-regular fa-mountain-sun"></i>
+                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_vm %> vm</p>
+              </div>
+            </div>
+          </div>
       </div>
     <% end %>
   </td>
